# spoa-rs

./: .gitignore  .gitmodules  Cargo.toml
spoa-sys/: Cargo.toml  build.rs
spoa-sys/include/: bindings.hpp
spoa-sys/src/: bindings.cpp  lib.rs
src/: lib.rs
