[package]
name = "spoa-sys"
description = "Low-level bindings to the spoa C++ library."
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/nlhepler/spoa-rs"
build = "build.rs"
links = "spoa"

[features]
default = []
simde = []
nonative = []

[dependencies]
cxx = "1.0.136"

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0.136"
walkdir = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(disablenative)'] }
